# DivApply

./: .dockerignore  .env.example  .gitignore  AI_ASSISTANCE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MIGRATION_CHECKLIST.md  PUBLISHING.md  README.md  SPEC.md  install.cmd  install.ps1  install.sh  profile.example.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: AUDIT_2026-07-10.md  AUDIT_REPORT.md  MIGRATION.md  OPERATIONS.md  PRIVACY.md
scripts/: divapply  divapply.cmd
src/applypilot/: __init__.py  __main__.py  cli.py  config.py  database.py  llm.py  pipeline.py  social.py  view.py
src/applypilot/apply/: chrome.py  dashboard.py  launcher.py  prompt.py
src/applypilot/config/: searches.example.yaml  sites.yaml
src/applypilot/discovery/: jobspy.py  smartextract.py  workday.py
src/applypilot/enrichment/: detail.py
src/applypilot/scoring/: cover_letter.py  pdf.py  scorer.py  tailor.py  ultimate.py  validator.py
src/applypilot/wizard/: init.py
src/divapply/: __init__.py  __main__.py  archive.py  artifacts.py  backup.py  cli.py  config.py  dashboard_data.py  database.py  editor.py  jobspy_runtime.py  llm.py  llm_policy.py  local_server.py  maintenance.py  manual_url.py  mcp_runtime.py  pipeline.py  privacy.py  runtime.py  search_policy.py  security.py  social.py  view.py
src/divapply/apply/: answers.py  chrome.py  dashboard.py  launcher.py  prompt.py
src/divapply/config/: coursework.seed.json  employers.yaml  searches.example.yaml  sites.yaml
src/divapply/discovery/: filters.py  jobspy.py  smartextract.py  workday.py
src/divapply/enrichment/: detail.py
src/divapply/mcp_runtime_assets/: __init__.py  package-lock.json  package.json
src/divapply/migrations/: __init__.py
src/divapply/scoring/: composite.py  context.py  cover_letter.py  embedding.py  evidence.py  keywords.py  pdf.py  scorer.py  tailor.py  ultimate.py  validator.py
src/divapply/wizard/: init.py
tests/: test_answer_bank.py  test_apply_chrome.py  test_apply_dashboard.py  test_apply_launcher.py  test_apply_prompt.py  test_archive_artifacts.py  test_artifact_identity.py  test_backup.py  test_ci_assurance.py  test_cli_help.py  test_config_loading.py  test_coursework_summary.py  test_cover_letter_quality.py  test_credentials_config.py  test_dashboard_cli.py  test_dashboard_data.py  test_dashboard_view.py  test_discovery_filters.py  test_distribution_contents.py  test_editor.py  test_enrichment_detail_edges.py  test_export_redaction.py  test_hybrid_scoring.py  test_install_safety.py  test_jobspy_runtime.py  test_lifecycle_and_dedup.py  test_llm_aliases.py  test_llm_retry_policy.py  test_local_server.py  test_maintenance.py  test_manual_url.py  test_mcp_runtime.py  test_migration.py  test_migrations.py  test_pdf_template.py  test_pending_work_policy.py  test_pipeline_stage_dispatch.py  test_private_collision_check.py  test_proxy_redaction.py  test_release_evidence.py  (+16 more)
tools/: archive_preflight.py  bootstrap.ps1  build_release_evidence.py  check_distribution_contents.py  check_private_collisions.py  extract_transcript.ps1  preflight.ps1
