[project]
name = "divapply"
version = "0.5.15"
description = "DivApply: AI-assisted end-to-end job application pipeline"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [{name = "InnitDivine"}]
keywords = ["job-search", "automation", "ai", "resume", "apply", "job-application"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "httpx>=0.24",
    "beautifulsoup4>=4.12.2,<5.0.0",
    "soupsieve>=2.8.4",
    "playwright>=1.40",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "pandas>=2.1.0,<3.0.0",
    "pypdf>=6.13.3",
]

[project.optional-dependencies]
coursework = ["pypdf>=6.13.3"]
jobspy-runtime = [
    "numpy==1.26.3; python_version < '3.13'",
    "pydantic>=2.3.0,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "tls-client>=1.0.1,<2.0.0",
    "regex>=2024.4.28,<2025.0.0",
    "markdownify>=0.14.1",
]
full = [
    "numpy==1.26.3; python_version < '3.13'",
    "pydantic>=2.3.0,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "tls-client>=1.0.1,<2.0.0",
    "regex>=2024.4.28,<2025.0.0",
    "markdownify>=0.14.1",
    "pypdf>=6.13.3",
]
dev = [
    "build>=1.3",
    "coverage[toml]>=7.15",
    "hatchling==1.31.0",
    "mypy>=2.2",
    "pip-audit>=2.10",
    "pytest>=7.0",
    "ruff>=0.1",
    "twine>=6.2",
]

[project.urls]
Homepage = "https://github.com/InnitDivine/DivApply"
Repository = "https://github.com/InnitDivine/DivApply"
Issues = "https://github.com/InnitDivine/DivApply/issues"

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/divapply"]
shared-scripts = { "scripts/divapply" = "divapply", "scripts/divapply.cmd" = "divapply.cmd" }

[tool.hatch.build.targets.sdist]
include = [
    "/src/divapply/**/*.py",
    "/src/divapply/config/employers.yaml",
    "/src/divapply/config/searches.example.yaml",
    "/src/divapply/config/sites.yaml",
    "/src/divapply/mcp_runtime_assets/package-lock.json",
    "/src/divapply/mcp_runtime_assets/package.json",
    "/scripts/divapply",
    "/scripts/divapply.cmd",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.coverage.run]
branch = true
source = ["divapply"]
relative_files = true

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
files = ["src/divapply"]
ignore_missing_imports = true
pretty = true
show_error_codes = true
warn_unused_configs = true
